--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
             margin-bottom: 10px;
         }
 
+        .product-info form {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 10px;
+        }
+
+        .product-info form input {
+            padding: 5px;
+            margin-bottom: 5px;
+        }
+
         .product-info a {
             background-color: #333;
             color: #fff;
@@ -136,10 +147,20 @@
                     <option value="L">Large</option>
                     <option value="XL">Extra Large</option>
                 </select>
-                <a href="#">Add to Cart</a>
+                <form action="#">
+                    <label for="qty">Quantity:</label>
+                    <input type="number" id="qty" name="quantity" min="1" value="1">
+                    <br>
+                    <button type="submit">Add to Cart</button>
+                </form>
             </div>
         </section>
-    </main>
 
-    <section id="about">
-        <h2>
+        </main>
+
+    <footer>
+        <p>&copy; Evergreen Threads 2024</p>
+    </footer>
+</body>
+</html>
+
